                            density matrix
    - Added new member functions for qpp::Gates:
          qpp::Gates::MODMUL() - quantum modular multiplication
    - Added Shor's algorithm example in "examples/shor.cpp"
    - introduced the largest unsigned index qpp::idx_inf in "constants.h"
    - Added a new exception class qpp::exception::QuditAlreadyMeasured
    - Added qpp::experimental::QCircuit class in "experimental/experimental.h"
      for simulating qudit quantum circuits
      BE AWARE: this is work in progress, not yet complete, hence still buggy

Version 1.1 - 26 November 2018
    - Added new functions in "operations.h":
          qpp::QFT()      - qudit quantum Fourier transform (includes qubit
                            QFT as a special case) on an entire quantum state
                            (state vector or density matrix)
          qpp::applyQFT() - qpply the qudit quantum Fourier transform on a
                            subset of qudits of a state vector or density matrix
    - Added Quantum Fourier transform example in "examples/qft.cpp"
    - Added new member functions for qpp::Gates:
          qpp::Gates::RX()   - rotation around X
          qpp::Gates::RY()   - rotation around Y
          qpp::Gates::RZ()   - rotation around Z
          qpp::Gates.SWAPd() - qudit SWAP gate
    - Added a suite of stress tests in "stress_tests" (only for POSIX systems)
    - Added Qiskit and QuTiP stress tests in "stress_tests/python"

Version 1.0 - 3 July 2018
    - Added full support for reversible classical circuits, added
      "classes/reversible.h" header file that contains the following classes:
          qpp::Dynamic_bitset - bitsets of variable length
          qpp::Bit_circuit    - classical reversible circuits
    - Added "examples/reversible.cpp" example
    - The path to MATLAB can now be specified in the CMake command line (not
      hard coded anymore), such as
          cmake -DWITH_MATLAB="/Applications/MATLAB_R2017b.app" ..