@@ -8,37 +8,7 @@ int main() {
     using namespace qpp;
     using namespace qpp::experimental;
 
-    /*
-        QCircuitDescription circ{10, 10};
-        // circ.gate(gt.X, 7, "X gate on qubit 7");
-        circ.measureV(gt.X, 4, 0, "Initial measurement on qubit 4");
-        circ.gate(gt.X, 2, "X gate on qubit 2");
-        circ.gate(gt.CNOT, 1, 3, "CNOT on 1 3");
-        circ.measureZ(2, 0, "Z meas on qubit 2");
-        circ.gate(gt.TOF, 5, 3, 6, "TOF on 5 3 6");
-        circ.measureZ(6, 0);
-        circ.measureZ(9, 0);
-        circ.CTRL(gt.X, 6, 7, "Control X 6->7");
-        circ.measureV(gt.H, 0, 0, "Measure in X basis");
-        circ.gate(gt.Y, 8);
-        circ.measureKs({std::sqrt(2) * gt.X, std::sqrt(2) * gt.Z}, 7, 0,
-       "Kraus"); circ.measureZ(8, 0); circ.gate(gt.Z, {1, 2, 3}, "Z on 1 2 3");
-        circ.measureZ(5, 9);
-        circ.QFT({1, 2, 3});
-        circ.TFQ({1, 2, 3});
-        // circ.gate(gt.TOF, 4, 6, 7, "TOF 4 6 7");
-
-        std::cout << circ << std::endl;
-
-        QCircuitDescription test{10, 1, 2, "some circuit"};
-
-        test.measureZ(1, 0);
-        test.measureZ(3, 0);
-
-        std::cout << test << '\n';
-    */
-    // TODO consider putting d after name for default fn arguments
-
+    /////////// qubit teleportation ///////////
     QCircuitDescription teleport_qubit{3, 2, 2, "qubit teleportation"};
     // set the qubit 0 to a random state
     cmat U = randU(2);
@@ -99,5 +69,18 @@ int main() {
     psi_final = qc_tele_qudit.get_psi();
     std::cout << "teleported state:\n";
     std::cout << disp(psi_final) << '\n';
-    std::cout << "norm difference: " << norm(psi_final - psi_initial) << '\n';
+    std::cout << "norm difference: " << norm(psi_final - psi_initial) << "\n\n";
+
+    /////////// more testing ///////////
+
+    std::cout << "more testing\n";
+    QCircuitDescription qcd{3, 3};
+    qcd.gate_fan(gt.H);
+    qcd.measureZ(0, 0);
+    qcd.measureZ(2, 2);
+
+    QCircuit qc{qcd};
+    qc.run();
+    std::cout << qc << '\n';
+    std::cout << disp(qc.get_psi()) << '\n';
 }
